@@ -1,3 +1,3 @@
 # zcmb has a conflict with full set c ext.
 target:
-	cm.lb x8,(x8)
+	cm.lb x8,8(x8)
