@@ -8,19 +8,18 @@
 Disassembly of section .text:
 
 0+000 <target>:
-[	 ]*[0-9a-f]+:[	 ]+2120[	 ]+cm.lb[	 ]+s0,2\(a0\)
-[	 ]*[0-9a-f]+:[	 ]+2a1c[	 ]+cm.lb[	 ]+a5,1\(a2\)
-[	 ]*[0-9a-f]+:[	 ]+2080[	 ]+cm.lb[	 ]+s0,0\(s1\)
+[	 ]*[0-9a-f]+:[	 ]+00250403[	 ]+lb[	 ]+s0,2\(a0\)
+[	 ]*[0-9a-f]+:[	 ]+00160783[	 ]+lb[	 ]+a5,1\(a2\)
+[	 ]*[0-9a-f]+:[	 ]+00048403[	 ]+lb[	 ]+s0,0\(s1\)
 [	 ]*[0-9a-f]+:[	 ]+2044[	 ]+cm.lb[	 ]+s1,4\(s0\)
 [	 ]*[0-9a-f]+:[	 ]+2870[	 ]+cm.lb[	 ]+a2,7\(s0\)
 [	 ]*[0-9a-f]+:[	 ]+2794[	 ]+cm.lb[	 ]+a3,8\(a5\)
 [	 ]*[0-9a-f]+:[	 ]+2ff8[	 ]+cm.lb[	 ]+a4,15\(a5\)
-[	 ]*[0-9a-f]+:[	 ]+2024[	 ]+cm.lb[	 ]+s1,2\(s0\)
-[	 ]*[0-9a-f]+:[	 ]+2b9c[	 ]+cm.lb[	 ]+a5,1\(a5\)
-[	 ]*[0-9a-f]+:[	 ]+2000[	 ]+cm.lb[	 ]+s0,0\(s0\)
+[	 ]*[0-9a-f]+:[	 ]+2044[	 ]+cm.lb[	 ]+s1,4\(s0\)
+[	 ]*[0-9a-f]+:[	 ]+2bdc[	 ]+cm.lb[	 ]+a5,5\(a5\)
+[	 ]*[0-9a-f]+:[	 ]+2060[	 ]+cm.lb[	 ]+s0,6\(s0\)
 [	 ]*[0-9a-f]+:[	 ]+20dc[	 ]+cm.lb[	 ]+a5,4\(s1\)
 [	 ]*[0-9a-f]+:[	 ]+2a7c[	 ]+cm.lb[	 ]+a5,7\(a2\)
 [	 ]*[0-9a-f]+:[	 ]+2794[	 ]+cm.lb[	 ]+a3,8\(a5\)
 [	 ]*[0-9a-f]+:[	 ]+2ff8[	 ]+cm.lb[	 ]+a4,15\(a5\)
-[	 ]*[0-9a-f]+:[	 ]+2380[	 ]+cm.lb[	 ]+s0,0\(a5\)
-[	 ]*[0-9a-f]+:[	 ]+2004[	 ]+cm.lb[	 ]+s1,0\(s0\)
+[	 ]*[0-9a-f]+:[	 ]+00040483[	 ]+lb[	 ]+s1,0\(s0\)
