@@ -16,9 +16,9 @@ Disassembly of section .text:
 [ 	]+a:[ 	]+9c61[ 	]+c.zext.b[ 	]+s0
 [ 	]+c:[ 	]+9fdd[ 	]+c.mul[ 	]+a5,a5
 [ 	]+e:[ 	]+9ff5[ 	]+c.not[ 	]+a5
-[ 	]+10:[ 	]+2000[ 	]+cm.lb[ 	]+s0,0\(s0\)
-[ 	]+12:[ 	]+2122[ 	]+cm.lbu[ 	]+s0,2\(a0\)
-[ 	]+14:[ 	]+3020[ 	]+cm.lh[ 	]+s0,2\(s0\)
-[ 	]+16:[ 	]+3022[ 	]+cm.lhu[ 	]+s0,2\(s0\)
-[ 	]+18:[ 	]+a120[ 	]+cm.sb[ 	]+s0,2\(a0\)
-[ 	]+1a:[ 	]+b020[ 	]+cm.sh[ 	]+s0,2\(s0\)
+[ 	]+10:[ 	]+2040[ 	]+cm.lb[ 	]+s0,4\(s0\)
+[ 	]+12:[ 	]+2142[ 	]+cm.lbu[ 	]+s0,4\(a0\)
+[ 	]+14:[ 	]+3040[ 	]+cm.lh[ 	]+s0,4\(s0\)
+[ 	]+16:[ 	]+3042[ 	]+cm.lhu[ 	]+s0,4\(s0\)
+[ 	]+18:[ 	]+a140[ 	]+cm.sb[ 	]+s0,4\(a0\)
+[ 	]+1a:[ 	]+b040[ 	]+cm.sh[ 	]+s0,4\(s0\)
